--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "poppins", sans-serif;
+  /* background-color: #000000; */
 }
 
 .hero{
@@ -21,7 +22,7 @@ nav{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px 0;
+  padding: 10px 0;
 }
 
 .logo{
@@ -87,4 +88,15 @@ nav ul li a:hover{
 
 span{
   color: #fff724;
+}
+
+.container{
+  margin-top: 20px;
+  background-color: #000000;
+  text-align: center;
+}
+
+.jumbotron{
+color: #000000;
+/*background-color:none !important;*/
 }
