--- a/style.css
+++ b/style.css
@@ -22,12 +22,12 @@ nav{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 0;
+  padding: 1% 0;
 }
 
-.logo{
-  width: 10px;
-}
+/* .logo{ */
+  /* width: 10px; */
+/* } */
 
 nav ul{
   flex: 1;
